wdn/templates_4.1/less/layouts/navigation.less
.nav-bar() {
    .clear-fix;
    background-color: @brand;
}

.skipnav {

    a {
        position: absolute;
        z-index: 5;
        left: -999em;
        display: block;
        color: #fff;
    }
}

.wdn-menu-trigger { // Holds the label for the toggle of the navigation

    @media @bp-nav-hidden { // Styles specifc to only the mobile view
		display: flex;
		flex-flow: nowrap;
		align-items: center;
        .nav-bar();
        height: 40px;
    }

    label {
        .wdn-text-hidden; // Hides label until replaced by JS. In v4.2, put element in an include file and wrap with <span class="wdn-text-hidden">
    }
}

// Shared styles for Menu & Share icons
.wdn-nav-icon() {
    white-space: nowrap;
    overflow: hidden;
    color: #fff;

    &:before { // Show the navigation icon
        margin: 0;
        padding: 0;
    }
}

.wdn-icon-menu { // Hide the label text off screen
    .wdn-nav-icon();
    position: relative;
    font-size: 21px;
    font-size: 1.333rem;
}

.wdn-nav-toggle {
	.inner-wrapper-margin-left();
    padding: 0;
    z-index: @nav-z-index + 1;
    overflow: hidden;
    line-height: 1;
	border: none;
	background-color: transparent;

    @media @bp-nav-hidden {
    	height: 40px;
    }

    @media @bp-nav-full {
        position: absolute;
        top: 24px;
    }
}

#wdn_navigation_bar {
	position: relative;
    .brand-font();
    color: #fff;

    // Styles specifc to only the mobile view
    @media @bp-nav-hidden {
        position: fixed;
        z-index: @nav-z-index;
        top: 0;
        padding-top: 1em;
        left: (@nav-width * -1); // Hide off-screen
        width: @nav-width;
        height: 100%;
        overflow-x: hidden;
        overflow-y: scroll;
        transition: left @nav-transition-duration ease;
        color: @cream;
        box-shadow: inset -16px 0 16px -16px @ui14;
        background-color: @ui12;
    }

    @media @bp-nav-full {
	    background: @ui08;
    }

    a {
        text-decoration: none;
        color: #fff;

        @media @bp-nav-hidden {
            color: @ui05;
        }

        &:hover {
            @media @bp-nav-hidden {
                color: #fff;
            }
        }
    }

    ul {
        .list-reset();
    }
}

#navigation {

    h3 {
        color: #fffdfd;
    }

    a {
        padding: 5px 5%;
        transition: height @nav-transition-duration ease;
        display: block;

        @media @bp480 {
            padding-left: @page-offset-480;
            padding-right: @page-offset-480;
        }

        @media @bp640 {
            padding-left: @page-offset-640;
            padding-right: @page-offset-640;
        }

        // Styles specific to the mobile view
        @media @bp-nav-hidden {
            border-bottom: 1px solid rgba(0, 0, 0, 0.15);

            &:hover {
                border-bottom: 1px solid rgba(0, 0, 0, 0);
            }
        }

        @media @bp-nav-full {
            padding: 5px 5%;
        }
    }

    // Styles specific to the mobile view
    @media @bp-nav-hidden {

        > ul {
            padding-bottom: 4.209em;
        }
    }

    > ul > li > a {
        padding-top: 1em;
        letter-spacing: 0.01em;
    }

    li {
        text-transform: uppercase;
        .rem(21);

        &.empty {
            display: none;
        }

        li {
            float: none;
            .sans-serif-font();
            text-transform: none;
            .rem(11);
        }

        // Styles specific to the full view
        @media @bp-nav-full {
            float: left;
            width: 16.6666%;
            text-align: center;

            &.empty {
                display: list-item;
                visibility: hidden;
            }

            ul {
                height: 0;
                overflow: hidden;
            }

            li {
                width: 100%;
                padding: 0;
                border-bottom: 1px solid fadeout(#000,94%);

                &:last-child {
                    border-bottom: none;
                }

                a {
                    text-align: left;
                }
            }
        }
    }

    // Styles specific to the mobile view
    @media @bp-nav-hidden {
        .wdn-icon-menu {
            display: none;
        }
    }

    // Styles specific to the full view
    @media @bp-nav-full {
        .nav-bar();
        position: relative;
        z-index: @nav-z-index;
        width: 100%;

        > ul {
			.inner-wrapper-margin();
			padding: 0 1.777em;

            > li {
                border-right: 1px solid fadeout(#000,90%);
                line-height: 1;

                &:first-child {
                    border-left: 1px solid fadeout(#000,90%);
                }

                &:nth-of-type(7n) {
                    clear: left;
                }

                > a {
                    padding-top: 0.422em;
                    padding-bottom: 0.451em;
                }
            }
        }

        .wdn-icon-menu {
            position: absolute;
            left: 0;

            .empty-secondary & {
                display: none;
            }
        }
    }
    
    label {
        display: none; //BC fix, prevent duplicate nav buttons after change to buttons if includes are not yet updated
    }
}

.wdn-content-slide {
    position: relative;
    left: 0;
    transition: left @nav-transition-duration ease;
}

